--- a/pom.xml
+++ b/pom.xml
@@ -7,13 +7,21 @@
     <groupId>com.pt.ml</groupId>
     <artifactId>jvm-ml</artifactId>
     <version>1.0-SNAPSHOT</version>
-
+    <!--如果此配置不生效，检查setting.xml中的mirrorOf 不可配置为*-->
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
     <dependencies>
+        <!-- spark 相关-->
         <dependency>
             <groupId>org.apache.spark</groupId>
             <artifactId>spark-mllib_2.11</artifactId>
             <version>2.3.0</version>
         </dependency>
+        <!-- jfreeChart 绘图-->
         <dependency>
             <groupId>jfree</groupId>
             <artifactId>jfreechart</artifactId>
@@ -24,11 +32,13 @@
             <artifactId>jcommon</artifactId>
             <version>1.0.16</version>
         </dependency>
+        <!--xgboost-->
         <dependency>
             <groupId>com.github.hirofumi</groupId>
             <artifactId>xgboost4j-spark_2.11</artifactId>
             <version>0.7.0-p3</version>
         </dependency>
+        <!--分词-->
         <dependency>
             <groupId>com.huaban</groupId>
             <artifactId>jieba-analysis</artifactId>
@@ -39,12 +49,20 @@
             <artifactId>ansj_seg</artifactId>
             <version>5.0.3</version>
         </dependency>
+        <!--fastText库-->
         <dependency>
             <groupId>com.github.vinhkhuc</groupId>
             <artifactId>jfasttext</artifactId>
             <version>0.3</version>
         </dependency>
+        <!--T-SNE 降维 可视化-->
+        <dependency>
+            <groupId>com.github.lejon.T-SNE-Java</groupId>
+            <artifactId>tsne</artifactId>
+            <version>v2.5.0</version>
+        </dependency>
     </dependencies>
+
     <build>
         <plugins>
             <plugin>
