--- a/pom.xml
+++ b/pom.xml
@@ -61,6 +61,12 @@
             <artifactId>xgboost4j-spark_2.11</artifactId>
             <version>0.7.0-p3</version>
         </dependency>-->
+        <!--最大熵模型-->
+        <dependency>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.9.1</version>
+        </dependency>
 
         <!--分词-->
         <dependency>
